--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>猪价智盘 - HogPrice Insight</title>
+    <title>农产品数据库 - HogPrice Insight</title>
   </head>
   <body>
     <div id="app"></div>
